[project]
name = "refgenieserver"
version = "0.8.0"
description = "A web interface and RESTful API for reference genome assets"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Michal Stolarczyk" },
    { name = "Vince Reuter" },
    { name = "Nathan Sheffield" },
]
keywords = ["bioinformatics", "sequencing", "ngs", "genomes", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "aiofiles",
    "fastapi",
    "jinja2",
    "logmuse>=0.2",
    "refgenconf>=0.12.2",
    "ubiquerg>=0.6.1",
    "uvicorn>=0.7.1",
    "yacman>=0.9.5",
]

[project.urls]
Homepage = "https://refgenie.databio.org"

[project.scripts]
refgenieserver = "refgenieserver.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["refgenieserver*"]

[tool.setuptools.package-data]
refgenieserver = ["templates/*", "static/*"]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
addopts = "-rfE"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F403", "F405", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["refgenieserver"]
